1. 完成重构